Added photos and implemented in css

--- a/css/main_site01.css
+++ b/css/main_site01.css
@@ -5,15 +5,20 @@ body, html {
   color: #777;
 }
 
-.bgimg-1, .bgimg-2, .bgimg-3 {
+h4 {
+  margin-left: 18%; 
+  margin-right: 18%;
+}
+
+.bgimg-1, .bgimg-2, .bgimg-3, .crossing, .trees, .grande, .cross, .officer {
   position: relative;
-  opacity: 0.90;
+  opacity: 0.95;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
+
 .bgimg-1 {
   background-image: url("../img/bgOne.jpg");
   min-height: 100%;
@@ -22,6 +27,31 @@ body, html {
 .bgimg-2 {
   background-image: url("../img/bgTwo.jpg");
   min-height: 75%;
+}
+
+.crossing {
+  background-image: url("../img/crossing.jpg");
+  min-height: 100%;
+}
+
+.trees {
+  background-image: url("../img/throughtrees.jpg");
+  min-height: 100%;
+}
+
+.grande {
+  background-image: url("../img/riogrande.jpg");
+  min-height: 100%;
+}
+
+.cross {
+  background-image: url("../img/cross.jpg");
+  min-height: 100%;
+}
+
+.officer {
+  background-image: url("../img/officer.jpg");
+  min-height: 100%;
 }
 
 #mapid {
@@ -58,7 +88,7 @@ body, html {
   letter-spacing: 10px;
 }
 
-.stickyElement {
+.stickyElementLeft {
   position: sticky;
   position: -webkit-sticky;
   background-color: rgba(0, 0, 0, 0.8);
@@ -70,7 +100,22 @@ body, html {
   align-items: center;
   box-shadow: 0 0 6px #000;
   color: #fff;
-  margin-left: 25%;
+  margin-left: 10%;
+  }
+
+.stickyElementRight {
+  position: sticky;
+  position: -webkit-sticky;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 25%;
+  height: 25%;
+  top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 6px #000;
+  color: #fff;
+  margin-left: 60%;
   }
   
 .stickyWrapper{
