added header for css

--- a/css/main_site01.css
+++ b/css/main_site01.css
@@ -1,3 +1,9 @@
+/*--
+  --Author: Caleb Spradlin
+  --Version: 0.3 
+  --NM 420 Storymap Project
+-*/
+
 body, html {
   height: 100%;
   margin: 0;
