--- a/css/main_site01.css
+++ b/css/main_site01.css
@@ -64,6 +64,33 @@ h4 {
   background-image: url("../img/merlin.jpg");
   min-height: 100%;
 }
+
+.storyStyle{
+  color: #515151;
+  background-color:white;
+  text-align:center;
+  padding:50px 80px;
+  text-align: justify; 
+  margin-left: 18%; 
+  margin-right: 18%;
+}
+
+.capBig{
+  color:#777;
+  background-color:white;
+  text-align:center;
+  padding:50px 80px;
+  text-align: justify;
+}
+
+.capSmall{
+  color:#777;
+  background-color:white;
+  text-align:center;
+  padding:20px 80px;
+  text-align: justify;
+}
+
 #mapid {
   min-height: 100%;
   position: relative;
